--- a/Lesson_1/templates/base.html
+++ b/Lesson_1/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %} - FlaskApp</title>
+    <title>{% block title %} {% endblock %} Магазин</title>
     <style>
         nav a {
             color: #d64161;
@@ -20,7 +20,7 @@
         <a href="{{ url_for('Clothes') }}">Одежда</a>
         <a href="{{ url_for('Footwear') }}">Обувь</a>
         <a href="{{ url_for('Jacket') }}">Куртки</a>
-
+        
 
     </menu>
     <hr>
