--- a/Lesson_1/templates/index.html
+++ b/Lesson_1/templates/index.html
@@ -1,3 +1,17 @@
 {% extends 'base.html' %} {% block content %}
 <h1>Главная</h1>
+
+<form action="/getcookie" method="post">
+    <p>
+    <label for="username">Username</label>
+    <input type="text" name="username">
+</p>
+<p>
+    <label for="email">email</label>
+    <input type="email" name="email">
+</p>
+<p>
+    <input type="submit">
+</p>
+</form>
 {% endblock %}
