--- a/Lesson_1/templates/base.html
+++ b/Lesson_1/templates/base.html
@@ -20,7 +20,7 @@
         <a href="{{ url_for('Clothes') }}">Одежда</a>
         <a href="{{ url_for('Footwear') }}">Обувь</a>
         <a href="{{ url_for('Jacket') }}">Куртки</a>
-        
+        <a href="{{ url_for('registration') }}">Регистрация</a>
 
     </menu>
     <hr>
